--- a/Web.config
+++ b/Web.config
@@ -12,7 +12,7 @@
 
       <mimeMap fileExtension=".unityweb" mimeType="application/octet-stream"/>
 
-      <!--<remove fileExtension=".wasm" />-->
+      <remove fileExtension=".wasm" />
       
       <mimeMap fileExtension=".wasm" mimeType="application/wasm" />
 
