--- a/Web.config
+++ b/Web.config
@@ -34,6 +34,8 @@ This module is available at https://www.iis.net/downloads/microsoft/url-rewrite.
       <mimeMap fileExtension=".js.gz" mimeType="application/javascript" />
       <remove fileExtension=".symbols.json.gz" />
       <mimeMap fileExtension=".symbols.json.gz" mimeType="application/octet-stream" />
+      <remove fileExtension=".framework.js.gz" />
+      <mimeMap fileExtension=".framework.js.gz" mimeType="application/javascript" />
       <!-- The following lines are required for builds compressed with Brotli, which don't include decompression fallback. -->
       <remove fileExtension=".data.br" />
       <mimeMap fileExtension=".data.br" mimeType="application/octet-stream" />
